--- a/kontakt.html
+++ b/kontakt.html
@@ -58,13 +58,13 @@
         <nav class="main-nav" style="opacity: 1 !important;">
           <ul>
             <li>
-              <a href="index.html" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+              <a href="index.html" title="Hjem" class="main-nav-hjem animasjon">Hjem</a>
             </li>
             <li>
               <a
                 href="portefølje.html"
                 title="Om meg"
-                class="main-nav-ommeg fade"
+                class="main-nav-ommeg animasjon"
                 >Portefølje</a
               >
             </li>
@@ -74,7 +74,7 @@
                 target="_blank"
                 title="CV"
                 rel="noreferrer"
-                class="main-nav-cv fade"
+                class="main-nav-cv animasjon"
                 >CV</a
               >
             </li>
@@ -83,7 +83,7 @@
                 href="kontakt.html"
                 title="Kontakt"
                 rel="noreferrer"
-                class="main-nav-kontakt fade"
+                class="main-nav-kontakt animasjon"
                 >Kontakt</a
               >
             </li>
@@ -149,7 +149,7 @@
                 </label>
               </fieldset>
 
-              <button type="submit" class="btn fade">Send skjema</button>
+              <button type="submit" class="btn">Send skjema</button>
               <br />&nbsp;
               <label style="position: absolute; display: none;"
                 >Don’t fill this out if you're human: <input name="bot-field"
