--- a/portefølje.html
+++ b/portefølje.html
@@ -56,13 +56,13 @@
         <nav class="main-nav">
           <ul>
             <li>
-              <a href="index.html" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+              <a href="index.html" title="Hjem" class="main-nav-hjem animasjon">Hjem</a>
             </li>
             <li>
               <a
                 href="portefølje.html"
                 title="Om meg"
-                class="main-nav-ommeg fade"
+                class="main-nav-ommeg animasjon"
                 >Portefølje</a
               >
             </li>
@@ -72,7 +72,7 @@
                 target="_blank"
                 title="CV"
                 rel="noreferrer"
-                class="main-nav-cv fade"
+                class="main-nav-cv animasjon"
                 >CV</a
               >
             </li>
@@ -81,7 +81,7 @@
                 href="kontakt.html"
                 title="Kontakt"
                 rel="noreferrer"
-                class="main-nav-kontakt fade"
+                class="main-nav-kontakt animasjon"
                 >Kontakt</a
               >
             </li>
@@ -129,7 +129,7 @@
               target="_blank"
               title="Statens Vegvesen"
               rel="noreferrer"
-              class="btn fade"
+              class="btn animasjon"
               >Besøk side</a
             >
           </div>
@@ -153,7 +153,7 @@
               href="https://react-c776ed.netlify.com/"
               target="_blank"
               title="Nettbutikk i React"
-              class="btn fade"
+              class="btn animasjon"
               >Besøk side</a
             >
           </div>
@@ -181,7 +181,7 @@
               href="https://www.stylechild.no/"
               target="_blank"
               title="Style Child"
-              class="btn fade"
+              class="btn animasjon"
               >Besøk side</a
             >
           </div>
@@ -207,7 +207,7 @@
               href="https://minhestebutikk.no/"
               target="_blank"
               title="Minhestebutikk"
-              class="btn fade"
+              class="btn animasjon"
               >Besøk side</a
             >
           </div>
