--- a/index.html
+++ b/index.html
@@ -61,15 +61,18 @@
       </div>
     </noscript>
     <div class="wrapper">
-      <!-- Navigasjon -->
-
-      <nav class="main-nav">
+       <!-- Navigasjon -->
+      
+       <nav class="main-nav">
         <ul>
           <li>
-            <a href="#" title="Hjem" class="main-nav-hjem fade">Hjem</a>
+            <a href="#" title="Hjem" class="main-nav-hjem animasjon">Hjem</a>
           </li>
           <li>
-            <a href="portefølje.html" title="Om meg" class="main-nav-ommeg fade"
+            <a
+              href="portefølje.html"
+              title="Om meg"
+              class="main-nav-ommeg animasjon"
               >Portefølje</a
             >
           </li>
@@ -79,30 +82,27 @@
               target="_blank"
               title="CV"
               rel="noreferrer"
-              class="main-nav-cv fade"
+              class="main-nav-cv animasjon"
               >CV</a
             >
           </li>
           <li>
-            <a
-              href="kontakt.html"
-              title="Kontakt"
-              rel="noreferrer"
-              class="main-nav-kontakt fade"
-              >Kontakt</a
+            <a href='kontakt.html' title='Kontakt' rel='noreferrer' class='main-nav-kontakt animasjon'>Kontakt</a
             >
           </li>
         </ul>
       </nav>
+  
 
-      <!-- Topp Kontainer -->
-
+    <!-- Topp Kontainer -->
+   
       <section class="topp-kontainer">
         <header class="showcase">
           <h2>Hei!</h2>
           <p>
-            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP, mySQL,
-            Wordpress, HTML, CSS, Javascript, React, Redux, Docker og mye mer.
+            Jeg heter Daniel Fjeldstad og er en webutvikler som kan PHP,
+            mySQL, Wordpress, HTML, CSS, Javascript, React, Redux, Docker og
+            mye mer.
           </p>
           <p></p>
         </header>
@@ -118,9 +118,9 @@
           <i class="fab fa-css3 fa-4x"></i>
 
           <p>
-            Siden 2000 har jeg arbeidet med HTML, CSS, PHP, mySQL og Javascript.
-            Jeg har arbeidet med Wordpress og Woocommerce siden 2011 hvor jeg
-            har arbeidet frilans via
+            Siden 2000 har jeg arbeidet med HTML, CSS, PHP, mySQL og
+            Javascript. Jeg har arbeidet med Wordpress og Woocommerce siden
+            2011 hvor jeg har arbeidet frilans via
             <a
               href="https://www.fiverr.com/w3bdesign"
               rel="noreferrer"
@@ -133,8 +133,8 @@
 
           <p>
             Jeg har også erfaring med andre teknologier som React, moderne
-            Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios, Docker
-            med mer.
+            Javascript (ES6+), Node.js, Firebase, Context, Redux, Axios,
+            Docker med mer.
           </p>
           <p>
             På
@@ -169,8 +169,8 @@
             ><i class="fab fa-linkedin fa-4x"></i
           ></a>
           <p>
-            Jeg oppdaterer jevnlig min Github konto med nye prosjekter. Hvis du
-            er interessert kan du ta en titt
+            Jeg oppdaterer jevnlig min Github konto med nye prosjekter. Hvis
+            du er interessert kan du ta en titt
             <a
               href="https://github.com/w3bdesign"
               target="_blank"
@@ -197,9 +197,10 @@
           </p>
         </div>
       </section>
+   
 
-      <!-- Bunn / footer -->
-      <footer class="reveal">
+    <!-- Bunn / footer -->
+      <footer>
         <p>Daniel &copy; 2020</p>
       </footer>
     </div>
@@ -210,9 +211,9 @@
 
     <!-- Inkluder ScrollMagic -->
     <script src="./js/ScrollMagic.min.js"></script>
-    <script src="./js/animation.gsap.min.js"></script>
+    <script src="./js/animation.gsap.min.js"></script>   
 
     <!-- Animasjoner -->
-    <script src="./js/animation.js"></script>
+    <script src='./js/animation.js'></script>
   </body>
 </html>
