--- a/kontakt.html
+++ b/kontakt.html
@@ -91,7 +91,7 @@
         </nav>
      
 
-      <!-- Portefølje -->
+      <!-- Kontakt -->
      
         <section class="portfolio-header">
           <h3>Kontaktskjema</h3>
