--- a/portefølje.html
+++ b/portefølje.html
@@ -116,8 +116,7 @@
             ><img src="./img/statens-vegvesen.jpg" alt="Statens Vegvesen bilde"
           /></a>
           <p>
-            Henter kjøretøyinformasjon fra REST APIet hos
-            https://www.vegvesen.no og viser det.
+            Henter kjøretøyinformasjon fra REST API hos https://www.vegvesen.no
           </p>
           <p>
             Inneholder: Standard Javascript, Materialize CSS, Input validering,
@@ -152,6 +151,33 @@
             href="https://react-c776ed.netlify.com/"
             target="_blank"
             title="Nettbutikk i React"
+            class="btn animasjon"
+            >Besøk side</a
+          >
+        </div>
+
+        <div class="boks port-3 reveal">
+          <i class="fab fa-js fa-4x"></i>
+          <h3>TODO med React Hooks</h3>
+          <a
+            href="https://react-todo-hooks.netlify.com/"
+            target="_blank"
+            title="TODO applikasjon med React Hooks"
+          >
+            <img
+              src="./img/react-todo.jpg"
+              alt="TODO applikasjon med React Hooks"
+          /></a>
+
+          <p>TODO applikasjon med React Hooks og Ant Design</p>
+          <p>
+            Inneholder: React, Ant Design v4, Uuid, paginering, polyfill for IE
+            11, responsivt design med mer.
+          </p>
+          <a
+            href="https://react-todo-hooks.netlify.com/"
+            target="_blank"
+            title="TODO applikasjon med React Hooks"
             class="btn animasjon"
             >Besøk side</a
           >
